Changed language string "study" to "message" in the system language file

--- a/admin/language/en-GB/en-GB.com_proclaim.sys.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.sys.ini
@@ -56,8 +56,8 @@ JBS_MNU_SERIES = "Series"
 JBS_MNU_SERVERS = "Servers"
 JBS_MNU_SERVER_FOLDERS = "Server Folders"
 JBS_MNU_SOCIAL_NETWORK_LINKS = "Social Media Links"
-JBS_MNU_STUDIES = "Studies"
-JBS_MNU_STUDY_COMMENTS = "Study Comments"
+JBS_MNU_STUDIES = "Messages"
+JBS_MNU_STUDY_COMMENTS = "Message Comments"
 JBS_MNU_STYLES = "CSS Styles"
 JBS_MNU_TEACHERS = "Teachers"
 JBS_MNU_TEMPLATE_CODE_DISPLAY = "Template Files"
@@ -77,16 +77,16 @@ JBS_MNU_COMMENTS_LIST_EDIT_LAYOUT = "Administer Comments"
 JBS_MNU_COMMENTS_LIST_EDIT_LAYOUT_DESC = "Create a link to the Administration Comments Page"
 JBS_MNU_LANDING_PAGE_LAYOUT = "Landing Page Layout"
 JBS_MNU_LANDING_PAGE_LAYOUT_DESC = "Create a link to the main Proclaim List Page"
-JBS_MNU_LATEST_STUDY_LAYOUT = "Latest Study Details Link"
-JBS_MNU_LATEST_STUDY_LAYOUT_DESC = "Creates a link to the details view of your latest study automatically"
+JBS_MNU_LATEST_STUDY_LAYOUT = "Latest Message Details Link"
+JBS_MNU_LATEST_STUDY_LAYOUT_DESC = "Creates a link to the details view of your latest message automatically"
 JBS_MNU_MEDIAFILES_LIST_LAYOUT = "FOR ADMIN of Media Files"
 JBS_MNU_MEDIAFILES_LIST_LAYOUT_DESC = "Create a link to the Administration Media Files Page"
 JBS_MNU_SERIES_LIST_LAYOUT = "Series List Layout"
 JBS_MNU_SERIES_LIST_LAYOUT_DESC = "Create a link to the main Series List Page"
 JBS_MNU_SINGLE_SERIES_LAYOUT = "Single Series Layout"
 JBS_MNU_SINGLE_SERIES_LAYOUT_DESC = "Create a link to a single series"
-JBS_MNU_SINGLE_STUDY_LAYOUT = "Single Study Layout"
-JBS_MNU_SINGLE_STUDY_LAYOUT_DESC = "Create a link to a single study"
+JBS_MNU_SINGLE_STUDY_LAYOUT = "Single Message Layout"
+JBS_MNU_SINGLE_STUDY_LAYOUT_DESC = "Create a link to a single message"
 JBS_MNU_SINGLE_TEACHER_LAYOUT = "Single Teacher Layout"
 JBS_MNU_SINGLE_TEACHER_LAYOUT_DESC = "Create a link to a single teacher"
 JBS_MNU_STUDIES_LIST_EDIT_LAYOUT = "FOR ADMIN of Studies"
@@ -100,7 +100,7 @@ JBS_MNU_PODCASTS_LIST_LAYOUT = "Podcast Options"
 JBS_MNU_PODCASTS_LIST_LAYOUT_DESC = "Options for List layout"
 
 JBS_MNU_SELECT_SERIES_DESC = "Choose a single series to link to"
-JBS_MNU_SELECT_STUDY_DESC = "Choose a single study to link to"
+JBS_MNU_SELECT_STUDY_DESC = "Choose a single message to link to"
 JBS_MNU_SELECT_TEACHER_DESC = "Choose a single teacher to link to"
 JBS_MNU_SELECT_TEMPLATE = "Template for this page"
 JBS_MNU_SELECT_TEMPLATE_DESC = "Choose a template for your page"
