Fixed issues with Archive. One field was not displayed and not used. Edited language strings.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -523,10 +523,10 @@ JBS_ADM_FOLDERS_PATH_LABEL = "<strong>Warning! Path Folder</strong><br />Changin
 ;; Archive
 JBS_ADM_ARCHIVE = "Archive"
 JBS_CMN_ARCHIVE = "Archive Messages &amp; Media Files"
-JBS_ARCHIVE_DB_CHANGE = "We have archive %s Messages and %s Media Files with records older then %s."
-JBS_ARCHIVE_TIMEFRAME_LABEL = "How far back should we archive."
-JBS_ARCHIVE_TIMEFRAME_DESC = "From today's date, estimate how fare back you wish to archive. Example if you set 5 years any record back 5 years or older will be arechived"
-JBS_ARCHIVE_SWICH_LABEL = "How far back should we archive."
+JBS_ARCHIVE_DB_CHANGE = "We have archived %s Messages and %s Media Files with records older than %s."
+JBS_ARCHIVE_TIMEFRAME_LABEL = "How far back should we archive?"
+JBS_ARCHIVE_TIMEFRAME_DESC = "From today's date, estimate how far back you wish to archive. For example if you set 5 years any record back 5 years or older will be archived"
+JBS_ARCHIVE_SWICH_LABEL = "What interval shall we use (years, months, days)?"
 JBS_ARCHIVE_SWICH_DESC = "From today's date, estimate how far back you wish to archive. Example if you set 5 years any record back 5 years or older will be archived"
 
 ;; BAT Batch process
