Adding help files. Fixed issue where social share was not showing up on media popup window.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -74,7 +74,7 @@ JBS_CMN_ADMINISTRATION = "Administration"
 JBS_CMN_ASCENDING = "Ascending"
 JBS_CMN_AUTOCLOSE_IN_3S = "This window will close automatically in 3 seconds."
 JBS_CMN_AVPLUGIN = "All Videos or JPlayer Plugin"
-JBS_CMN_AVR = "All Videos, JPlayer or Embed Code"
+JBS_CMN_AVR = "Embed Code"
 JBS_CMN_BATCH_LABLE = "BATCH"
 JBS_CMN_BATCH_OPTIONS = "Batch Options"
 JBS_CMN_BATCH_TIP = "PLEASE CHANGE"
