Adding more help files and editing strings in language files.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -928,7 +928,7 @@ JBS_MED_VIRTUEMART_ITEM_DESC = "If installed, virtuemart items will appear in de
 JBS_MED_SAVE = "Media Saved"
 JBS_MED_MEDIA_POPOUT_YES = "Pop Out:"
 JBS_MED_MEDIA_POPOUT_YES_DESC = "Should Pop Out show on Squeezebox."
-JBS_MED_MEDIA_POPOUT_TEXT = "Pop Out Text:"
+JBS_MED_MEDIA_POPOUT_TEXT = "Squeeze Box Pop Out Text:"
 JBS_MED_MEDIA_POPOUT_TEXT_DESC = "Text to to use for button on overriding the default text."
 JBS_MED_CONVERTER = "Save Converter"
 
@@ -1570,7 +1570,7 @@ JBS_TPL_LISTITEMS_DETAILS_TEXT_DESC = "Text to show on mouse over of details ima
 JBS_TPL_LISTITEMS_INTRO_SHOW = "Show/Hide Intro"
 JBS_TPL_LISTITEMS_INTRO_SHOW_DESC = "Choose whether to hide or show the listing introduction header"
 JBS_TPL_LISTITEMS_LISTTEACHERS = "Ids of teachers on list page"
-JBS_TPL_LISTITEMS_LISTTEACHERS_DESC = "Enter a comma separated list of teacher ids to show on the list page"
+JBS_TPL_LISTITEMS_LISTTEACHERS_DESC = "Click to include a teacher in the list. Control or Cmd click to add multiple. Leave blank for all."
 JBS_TPL_LISTITEMS_LIST_INTRO = "List Introduction"
 JBS_TPL_LISTITEMS_LIST_TEACHER_SHOW = "Show/Hide Teachers"
 JBS_TPL_LISTITEMS_LIST_TEACHER_SHOW_DESC = "Choose whether to hide or show the teachers identified below on the Messages List page"
@@ -1624,7 +1624,7 @@ JBS_TPL_MEDIA_LIGHTCOLOR_DESC = "Use HEX something like 0x000000"
 JBS_TPL_MEDIA_MEDIA_PLAYER = "Default Player for all media"
 JBS_TPL_MEDIA_MEDIA_PLAYER_DESC = "Choose media player for all files. This can be overridden in an individual media file record."
 JBS_TPL_MEDIA_PLAYERIDLEHIDE = "Player ID Hide"
-JBS_TPL_MEDIA_PLAYERIDLEHIDE_DESC = "Need to find the best discription for this"
+JBS_TPL_MEDIA_PLAYERIDLEHIDE_DESC = "Show or hide the Player ID"
 JBS_TPL_MEDIA_PLAYERPOSITION = "Player Position"
 JBS_TPL_MEDIA_PLAYERPOSITION_DESC = "Position of the transport bar"
 JBS_TPL_MEDIA_PLAYER_HEIGHT = "Height for media player"
@@ -1644,7 +1644,7 @@ JBS_TPL_MEDIA_PROTOCOL = "Web protocol"
 JBS_TPL_MEDIA_PROTOCOL_DESC = "http:// assumed. Type in a different protocol to override such as ftp:// sftp:// https://. Will prepend each media file path"
 JBS_TPL_MEDIA_SCREENCOLOR = "Screen Color"
 JBS_TPL_MEDIA_SCREENCOLOR_DESC = "Use HEX something like 0x000000"
-JBS_TPL_MEDIA_SHOW_FILESIZE = "Media Label/Filesize"
+JBS_TPL_MEDIA_SHOW_FILESIZE = "Squeeze Box Media Label/Filesize"
 JBS_TPL_MEDIA_SHOW_FILESIZE_DESC = "Choose a label for the media file"
 JBS_TPL_MESSAGETYPE_BRACE = "Messagetype {message_type}"
 JBS_TPL_NO_APPROVAL = "No Approval needed"
