Made some minor text adjustments

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1413,7 +1413,7 @@ JBS_TPL_CAPTCHA_USE = "Use reCaptcha"
 JBS_TPL_CHOOSE_BIBLE_VERSION = "Select Bible Version"
 JBS_TPL_CHOOSE_BIBLE_VERSION_DESC = "Choose which version of the Bible to use in the passage lookup"
 JBS_TPL_COLSPAN = "Columns to Span"
-JBS_TPL_COLSPAN_DESC = "How many columns should this item span. An example would be the message introduction. If you have four items in rows above, you might want this item to span 4 to take up the whole width. item be."
+JBS_TPL_COLSPAN_DESC = "How many columns should this item span. An example would be the message introduction. If you have four items in rows above, you might want this item to span 4 to take up the whole width."
 JBS_TPL_COLUMN = "Order"
 JBS_TPL_COLUMN_DESC = "Choose what order to show this item in its row"
 JBS_TPL_COMMENT_TYPE = "Type of comments"
