More work on series filters. NOt working yet

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1065,6 +1065,8 @@ JBS_PLG_SEARCH_FIELD_ARCHIVED_DESC = "Show archived messages"
 JBS_SER_RETURN_SERIES_LIST = "Return To Series List"
 JBS_SER_SERIES_NAME = "Series Name"
 JBS_SER_STUDIES_FROM_THIS_SERIES = "Messages From This Series"
+JBS_SER_SERIES_NAME_DESC="Series Name Descending"
+JBS_SER_SERIES_NAME_ASC="Series Name Ascending"
 
 ;; SHR Sharing Networks
 JBS_SHR_ALTTEXT = "Alt Text"
