Updating some language strings

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -280,7 +280,7 @@ JBS_CMN_TOPIC_TAG_DESC = "Type a topic in the box"
 JBS_CMN_TOTAL_MEDIAFILES = "Total Media Files"
 JBS_CMN_TOTAL_PLAYERS = "Total Players"
 JBS_CMN_UPLOADS_NOT_ENABLED = "Uploads not enabled in PHP"
-JBS_CMN_USE_AV = "Use All Videos or JPlayer"
+JBS_CMN_USE_AV = "All Videos No Longer Supported"
 JBS_CMN_USE_AVR = "All Videos No Longer Supported"
 JBS_CMN_USE_BITLY = "Use bit.ly"
 JBS_CMN_USE_DEFAULT = "Use Default"
